
ChangeLog
 [ + added, - removed, * changed ]
 * 08Jul2013 Allow OpenMP user code to generate samples again
             Moved Extrae_set_initial_taskid at the very beginning
 * 04Jul2013 Fix compilation of papi_best_set for PAPI when using CUDA
             Move Extrae_CUDA_fini to cuda_common.c
 * 02Jul2013 Fixed compilation flags for the merger to enable the online support.
             Fixed which events are cached to keep the communicators definitions in the online analysis. 
             The first spectral analysis now applies windowing to the first 10% of the data.
             Fixed missing dependencies in the online libraries.
             Fixed report message for the circular buffer when parsing the XML configuration.
 * 25Jun2013 Fixed bug in the cpu IDs of unmatched communications through different tasks of the parallel merge.
             Removed extra debug messages.
             Added instrumentation support for MPI_comm_spawn and MPI_comm_spawn_multiple
 + 17Jun2013 Add instrumentation for routines that call fork/wait/...
             Fix bug that malformed communication records in mpi2prv serial
 + 12Jun2013 Add check for CUDA
 + 07Jun2013 Add CUDA fini to flush all streams just in case some did
               not get flushed
 + 06Jun2013 Added check for Extrae fortran API / define_event_type
             Additional bits for instrumenting OpenCL
 + 30May2013 First part of the OpenCL instrumentation
             Added tests to check clock resolution
 + 23May2013 Emitted pid(), ppid() and fork depth in the tracefile
             getrusage and mallinfo are emitted to 0 at the beginning
             Fixed make check
             Dyninst/fork instrumentation, free parent's buffer
             Trace initialization state / delimited even for Extrae_init
 * 21May2013 Get performance counters at flushes
 + 17May2013 Added extrae_define_event_type to be callable by Fortran
             Added sequential example of pi, including the above call.