@@ -87,7 +87,7 @@ void Extrae_SamplingHandler (void* address)
 	{
 		UINT64 temps = Clock_getCurrentTime_nstore();
 		SAMPLE_EVENT_HWC (temps, SAMPLING_EV, (unsigned long long) address);
-		trace_callers (temps, 7, CALLER_SAMPLING);
+		trace_callers (temps, 6, CALLER_SAMPLING);
 	}
 }
 
