@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 09Jul2013 Fix sampling handler callstack level
  * 08Jul2013 Allow OpenMP user code to generate samples again
              Moved Extrae_set_initial_taskid at the very beginning
  * 04Jul2013 Fix compilation of papi_best_set for PAPI when using CUDA
